k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: flask
  template:
    metadata:
      labels:
        app.kubernetes.io/name: flask
    spec:
      containers:
      - name: flask
        ports:
          - containerPort: 5000
        image: "eltitans/flask:latest"
