k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask
spec:
  ports:
    - name: "5000"
      port: 5000
      targetPort: 5000
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    app.kubernetes.io/name: flask
