k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - host: "flask.hamzaboubnane.tech"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: app-flask
              port:
                number: 5000
  tls:
    - hosts:
      - "flask.hamzaboubnane.tech"
      secretName: aks-ingress-wildcard
